# echo-rag

./: .env.example  .gitignore  Dockerfile.vibevoice  Makefile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  run_pipeline.py  vibevoice_entrypoint.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
eval/: evaluate.py
pipeline/: chunk.py  embed.py  rag.py  transcribe.py  transcribe_parakeet.py  transcribe_vibevoice_vllm.py
tests/: test_chunk.py  test_pipeline.py  test_rag.py  test_transcribe_parsing.py
